--- a/Cucumber-Maven/Cucumber_Project_MVN/pom.xml
+++ b/Cucumber-Maven/Cucumber_Project_MVN/pom.xml
@@ -95,7 +95,12 @@
             <artifactId>gherkin</artifactId>
             <version>26.1.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
